# squire

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml  renew.example.toml  squire.example.toml
.claude/agent-memory/cicd-engineer/: MEMORY.md  project_cicd_baseline.md
.claude/agent-memory/docs-writer/: MEMORY.md  doc-surface-map.md  project_docs_structure.md  project_test_fixtures.md  project_tool_registration.md
.claude/agents/: cicd-engineer.md  docs-writer.md
.claude/skills/bump-version/: SKILL.md
.claude/skills/create-pr/: SKILL.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile
docs/: architecture.md  cli.md  configuration.md  todos.md  usage.md  watch.md
docs/design/: multi-machine.md  watch-web-integration.md
docs/superpowers/plans/: 2026-04-04-cicd-improvements.md  2026-04-04-container-lifecycle-tools.md  2026-04-04-host-enrollment.md  2026-04-04-notifications-alerting.md  2026-04-04-tools-visibility.md  2026-04-05-docker-web-app.md  2026-04-05-watch-cycle-history.md
docs/superpowers/specs/: 2026-04-04-container-lifecycle-tools-design.md  2026-04-04-host-enrollment-design.md  2026-04-04-notifications-alerting-design.md  2026-04-04-tools-visibility-design.md  2026-04-05-docker-web-app-design.md  2026-04-05-watch-cycle-history-design.md
scripts/: webhook_receiver.py
src/renew/: __main__.py  cli.py  main.py
src/renew/agents/: __init__.py  renew_agent.py
src/renew/config/: __init__.py  app.py  database.py  llm.py  loader.py  notifications.py  paths.py
src/renew/database/: service.py
src/renew/instructions/: renew_agent.py
src/renew/notifications/: webhook.py
src/renew/schemas/: __init__.py  events.py  risk.py  system.py
src/renew/system/: __init__.py  backend.py  local.py
src/renew/tools/: docker_ps.py  journalctl.py  run_command.py
src/renew/tui/: app.py  approval_modal.py  chat_pane.py  status_panel.py
src/squire/: __main__.py  agent.py  approval.py  cli.py  insight_sweep.py  main.py  tokens.py  types.py  watch.py  watch_autonomy.py  watch_controller.py  watch_emitter.py  watch_loop.py
src/squire/adk/: __init__.py  runtime.py  session_state.py
src/squire/agents/: __init__.py  admin_agent.py  container_agent.py  monitor_agent.py  notifier_agent.py  squire_agent.py
src/squire/api/: __init__.py  app.py  dependencies.py  schemas.py
src/squire/callbacks/: db_approval_provider.py  revertible.py  risk_gate.py  sanitize.py
src/squire/config/: __init__.py  app.py  database.py  db_source.py  guardrails.py  hosts.py  llm.py  loader.py  notifications.py  paths.py  security.py  skills.py  watch.py
src/squire/database/: __init__.py  service.py
src/squire/hosts/: __init__.py  store.py
src/squire/instructions/: admin_agent.py  container_agent.py  monitor_agent.py  notifier_agent.py  profiles.py  router_agent.py  shared.py  squire_agent.py
src/squire/monitoring/: __init__.py  docker_state.py  loop.py  registry.py  sinks.py
src/squire/notifications/: __init__.py  alert_evaluator.py  conditions.py  email.py  factory.py  router.py  webhook.py
tests/: conftest.py  test_adk_runtime.py  test_api_chat.py  test_api_events.py  test_api_hosts.py  test_api_sessions.py  test_api_watch.py  test_api_watch_ws.py  test_config.py  test_config_api.py  test_config_db_source.py  test_config_overrides_db.py  test_database.py  test_database_watch.py  test_health.py  test_host_store.py  test_insight_sweep.py  test_keys.py  test_local_backend.py  test_main_snapshots.py  test_managed_hosts_db.py  test_notifications.py  test_phase1_safety.py  test_phase2_lifecycle.py  test_phase3_trust.py  test_phase4_insights.py  test_registry.py  test_risk_gate.py  test_session_state.py  test_skill_markers.py  test_skills.py  test_skills_api.py  test_watch_autonomy.py  test_watch_config.py  test_watch_controller.py  test_watch_emitter.py  test_watch_loop.py  test_watch_playbook_router.py  test_watch_tokens.py  test_web_static_dir.py
tests/test_agents/: test_agent_tree.py
tests/test_api/: test_tools_endpoint.py
tests/test_callbacks/: test_db_approval_provider.py  test_risk_gate_factory.py
tests/test_monitoring/: test_docker_state.py
tests/test_notifications/: test_alert_evaluator.py  test_conditions.py  test_email.py  test_router.py
tests/test_tools/: test_docker_cleanup.py  test_docker_compose.py  test_docker_container.py  test_docker_hints.py  test_docker_image.py  test_docker_network.py  test_docker_ps.py  test_docker_volume.py  test_notification_tools.py  test_run_command.py  test_safe_tool.py  test_system_info.py  test_systemctl.py  test_tool_effects.py  test_wait_for_state.py
web/: package-lock.json  package.json
web/public/: ICON_PROMPTS.md
(+120 files in other folders)
