[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "squire"
version = "0.1.1"
description = "An AI agent that monitors and manages your homelab."
authors = [{name = "Will Ahern"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "google-adk>=1.23.0",
    "litellm>=1.81.1",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "textual>=0.80.0",
    "rich>=13.0.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.27.0",
    "asyncssh>=2.17.0",
    "agent-risk-engine",
]

[project.scripts]
squire = "squire.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.14.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/squire"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
agent-risk-engine = { path = "packages/agent-risk-engine", editable = true }

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
