[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "squire"
version = "0.20.0"
description = "An AI agent that monitors and manages your homelab."
authors = [{name = "Will Ahern"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "google-adk==1.31.0",
    "litellm==1.82.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.2",
    "typer==0.24.1",
    "rich==15.0.0",
    "aiosqlite==0.22.1",
    "httpx==0.28.1",
    "asyncssh==2.22.0",
    "pyyaml==6.0.3",
    "agent-risk-engine==0.2.0",
    "tomlkit==0.14.0",
    "fastapi==0.136.1",
    "uvicorn[standard]==0.44.0",
]

[project.scripts]
squire = "squire.cli:app"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.6",
    "mypy==1.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/squire"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
